{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 365,
  "lineage": "8ebd9521-a849-97df-7fdd-9d3e058c2d00",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T10:29:23.449-07:00",
            "deny": [],
            "description": "Allow Cloud Run to access database",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pcs-helio/global/firewalls/darwin-production-allow-database",
            "log_config": [],
            "name": "darwin-production-allow-database",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "priority": 1000,
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/firewalls/darwin-production-allow-database",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "darwin-backend"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "darwin-database"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "8000",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T10:29:23.418-07:00",
            "deny": [],
            "description": "Allow Google Cloud health check probes",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pcs-helio/global/firewalls/darwin-production-allow-health-check",
            "log_config": [],
            "name": "darwin-production-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "priority": 1000,
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/firewalls/darwin-production-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "darwin-backend",
              "darwin-frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T10:29:23.481-07:00",
            "deny": [],
            "description": "Allow HTTP traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pcs-helio/global/firewalls/darwin-production-allow-http",
            "log_config": [],
            "name": "darwin-production-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "priority": 1000,
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/firewalls/darwin-production-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "darwin-backend",
              "darwin-frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T10:29:22.774-07:00",
            "deny": [],
            "description": "Allow HTTPS traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pcs-helio/global/firewalls/darwin-production-allow-https",
            "log_config": [],
            "name": "darwin-production-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "priority": 1000,
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/firewalls/darwin-production-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "darwin-backend",
              "darwin-frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6379"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T10:29:23.186-07:00",
            "deny": [],
            "description": "Allow Cloud Run to access Redis",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pcs-helio/global/firewalls/darwin-production-allow-redis",
            "log_config": [],
            "name": "darwin-production-allow-redis",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "priority": 1000,
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/firewalls/darwin-production-allow-redis",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "darwin-backend"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "darwin-redis"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T10:29:24.918-07:00",
            "deny": [],
            "description": "Allow SSH access for debugging",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pcs-helio/global/firewalls/darwin-production-allow-ssh",
            "log_config": [],
            "name": "darwin-production-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "priority": 1000,
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/firewalls/darwin-production-allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-allowed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-09-22T10:29:23.226-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Deny all other traffic (explicit)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pcs-helio/global/firewalls/darwin-production-deny-all",
            "log_config": [],
            "name": "darwin-production-deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "priority": 65534,
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/firewalls/darwin-production-deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "deny-all"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.128.164.40",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-09-22T10:28:48.301-07:00",
            "description": "Global IP address for load balancer",
            "id": "projects/pcs-helio/global/addresses/darwin-production-global-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "darwin-production-global-ip",
            "prefix_length": 0,
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/addresses/darwin-production-global-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_service_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.221.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-09-22T10:56:37.249-07:00",
            "description": "IP range reserved for private service access",
            "id": "projects/pcs-helio/global/addresses/darwin-production-private-services",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "darwin-production-private-services",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "prefix_length": 16,
            "project": "pcs-helio",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/addresses/darwin-production-private-services"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Forward HTTP traffic for redirect",
            "id": "projects/pcs-helio/global/forwardingRules/darwin-production-http-forwarding-rule",
            "ip_address": "34.128.164.40",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "darwin-production-http-forwarding-rule",
            "port_range": "80-80",
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/forwardingRules/darwin-production-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/targetHttpProxies/darwin-production-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_global_address.main",
            "module.networking.google_compute_target_http_proxy.https_redirect",
            "module.networking.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Main VPC network for darwin production environment",
            "enable_ula_internal_ipv6": false,
            "id": "projects/pcs-helio/global/networks/darwin-production-vpc",
            "mtu": 1460,
            "name": "darwin-production-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8035643355838560691",
            "project": "pcs-helio",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-09-22T10:29:24.900-07:00",
            "description": "Cloud Router for NAT gateway",
            "encrypted_interconnect_router": false,
            "id": "projects/pcs-helio/regions/us-central1/routers/darwin-production-router",
            "name": "darwin-production-router",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "project": "pcs-helio",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/regions/us-central1/routers/darwin-production-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "pcs-helio/us-central1/darwin-production-router/darwin-production-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 64,
            "name": "darwin-production-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "pcs-helio",
            "region": "us-central1",
            "router": "darwin-production-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_router.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-22T10:29:24.298-07:00",
            "description": "Main subnet for darwin production",
            "gateway_address": "10.0.0.1",
            "id": "projects/pcs-helio/regions/us-central1/subnetworks/darwin-production-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "darwin-production-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/networks/darwin-production-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pcs-helio",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.0.0/20",
                "range_name": "services-range"
              },
              {
                "ip_cidr_range": "192.168.16.0/20",
                "range_name": "pods-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/regions/us-central1/subnetworks/darwin-production-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-22T10:29:06.110-07:00",
            "description": "HTTP proxy for HTTPS redirect",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/pcs-helio/global/targetHttpProxies/darwin-production-http-proxy",
            "name": "darwin-production-http-proxy",
            "project": "pcs-helio",
            "proxy_bind": false,
            "proxy_id": 4883170182714636685,
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/targetHttpProxies/darwin-production-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/urlMaps/darwin-production-https-redirect"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-22T10:28:47.632-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "Redirect HTTP to HTTPS",
            "fingerprint": "zOuJ1hh5Ttg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/pcs-helio/global/urlMaps/darwin-production-https-redirect",
            "map_id": 7820303230444517792,
            "name": "darwin-production-https-redirect",
            "path_matcher": [],
            "project": "pcs-helio",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pcs-helio/global/urlMaps/darwin-production-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}